<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Header -->

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:src="@mipmap/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
     />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="550dp"
        android:letterSpacing="0.01"
        android:text="@string/create_account"
        android:textColor="#303030"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/showHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:src="@drawable/btn_styles"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPassword"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/btn_styles"
        android:text="@string/creacc"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword" />

    <TextView
        android:id="@+id/textSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/don_t_have_an_account_sign_in"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>
